--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 
           <div class="hero-banner">
 
-            <img src="./assets/images/IMG_20231217_210545-PhotoRoom.png-PhotoRoom.png" width="800" height="864" loading="lazy" alt="Ethan's Photo"
+            <img src="./assets/images/Untitled (1).jpeg" width="800" height="864" loading="lazy" alt="Ethan's Photo"
               class="img-cover">
 
             <div class="elem elem-1">
